# DurhamFireRisk

./: .gitignore  Dockerfile  ITERATIONS.md  METHODOLOGY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
api/: main.py  schemas.py
configs/: data_sources.yaml  logging_config.yaml  model_config.yaml  simulation_config.yaml
features/flood/: flow_accumulation.py  inundation_model.py
features/terrain/: slope_aspect.py
features/vegetation/: fuel_classifier.py  ndvi_extractor.py  proximity_calculator.py
ingestion/: config_loader.py  landfire_fetcher.py  ncmap_downloader.py  noaa_weather.py  parcel_fetcher.py  pipeline_runner.py
models/attribution/: shap_explainer.py
models/risk/: ensemble.py  flood_scorer.py  wildfire_scorer.py
models/simulation/: ember_transport.py  fire_spread.py  wind_field.py
models/vision/: backbone.py  train_roof.py
scripts/: export_web_data.py
tests/: test_api.py  test_features.py  test_ingestion.py  test_models.py  test_simulation.py
twin/: property_twin.py  scenario_runner.py  twin_builder.py
visualization/: risk_map.py  shap_plots.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: BuildingPanel.tsx  Legend.tsx  Map.tsx  StatsBar.tsx
web/lib/: colors.ts  types.ts
web/public/data/: buildings.geojson  fire_intensity.geojson  fire_isochrones.geojson  stats.json
