[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duke-climate-risk-engine"
version = "0.1.0"
description = "Property-level wildfire and flood risk platform for Duke University campus and Durham/Orange County NC"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ronit Dey"},
]
keywords = ["wildfire", "flood", "climate risk", "digital twin", "fire behavior", "insurance"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "features*", "models*", "twin*", "visualization*", "api*", "validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
